objects/Opportunity_Move_Outs__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When we get building uuid insted of reservable uuid in Contract event payload map here.</description>
        <inlineHelpText>When we get building uuid insted of reservable uuid in Contract event payload map here.</inlineHelpText>
        <label>Sellable Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunity Move Outs</relationshipLabel>
        <relationshipName>Opportunity_Move_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conference_Room_Credits__c</fullName>
        <label>Conference Room Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Won__c</fullName>
        <formula>IF(Opportunity__r.IsWon =True, "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Won</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Method__c</fullName>
        <label>Monthly Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_B_W__c</fullName>
        <label>Monthly Prints/Copies B&amp;W</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_Color__c</fullName>
        <label>Monthly Prints/Copies Color</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <description>Value of Move Out Date will get from Contract Event endpoint</description>
        <inlineHelpText>Value of Move Out Date will get from Contract Event endpoint</inlineHelpText>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Building__c</fullName>
        <formula>Opportunity__r.Building__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_2016__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage 2016</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Move Outs (from "there")</relationshipLabel>
        <relationshipName>Opportunity_Move_Outs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paperwork_Signed__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity__r.StageName, "Closing"), "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paperwork Signed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Desks_For_Move_Outs__c</fullName>
        <formula>Reservable__r.Office_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Desks For Move Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Desks__c</fullName>
        <label>Pending Desks</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prints_B_W_and_Color__c</fullName>
        <formula>"B&amp;W: "&amp; TEXT(Monthly_Prints_Copies_B_W__c) &amp;" Color: "&amp; TEXT(Monthly_Prints_Copies_Color__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prints B&amp;W and Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable_Building__c</fullName>
        <description>This field will fetch Move out's Reservable's Building</description>
        <formula>Reservable__r.Building__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will fetch Move out's Reservable's Building</inlineHelpText>
        <label>Reservable Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Opportunity Move Outs</relationshipLabel>
        <relationshipName>Opportunity_Move_Outs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Opportunity Move Outs</relationshipLabel>
        <relationshipName>Opportunity_Move_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sellable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If in contract event payload we get deal:true then this field will be true then this value becomes true</description>
        <inlineHelpText>To identify that this record was created for Sellable or for Normal move_ins</inlineHelpText>
        <label>Sellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>reservation_uuid__c</fullName>
        <externalId>true</externalId>
        <label>reservation_uuid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>We will capture  Move Outs of opportunity which are coming from Contract event</description>
    <label>Opportunity Move Out</label>
    <nameField>
        <displayFormat>MO-{0000000}</displayFormat>
        <label>Opportunity Move Outs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Move Outs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>